--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,8 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-auth:20.1.0'
 
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
 }
