--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,9 @@ dependencies {
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    //Service Authentication
     implementation 'com.google.android.gms:play-services-auth:20.2.0'
+
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.13.0'
