--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,21 +6,24 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:allowBackup="true"
         android:name=".App"
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="false"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.SmarTravel">
+        android:theme="@style/Theme.SmarTravel"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".Activities.MyPlacesActivity"
+            android:exported="false" />
 
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyC1ceioN4zpyYHA2Tp1DshESpJob8ife84" />
+            android:value="${MAPS_API_KEY}" />
 
         <activity
             android:name=".Activities.CreateNewTripActivity"
@@ -48,6 +51,5 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
     </application>
-
 
 </manifest>
